# autocleanup

./: Cargo.toml  build.sh
src/: lib.rs
